@@ -1,5 +1,5 @@
 /*
- * Copyright Consensys Software Inc., 2023
+ * Copyright Consensys Software Inc., 2025
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
@@ -14,7 +14,7 @@
 package tech.pegasys.teku.validator.client.signer;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.net.http.HttpClient;
 import java.time.Duration;
 import java.util.List;
@@ -60,7 +60,8 @@ public abstract class AbstractExternalSignerIntegrationTest {
     final ValidatorConfig config =
         ValidatorConfig.builder()
             .validatorExternalSignerPublicKeySources(List.of(KEYPAIR.getPublicKey().toString()))
-            .validatorExternalSignerUrl(new URL("http://127.0.0.1:" + client.getLocalPort()))
+            .validatorExternalSignerUrl(
+                URI.create("http://127.0.0.1:" + client.getLocalPort()).toURL())
             .validatorExternalSignerTimeout(TIMEOUT)
             .build();
     final Supplier<HttpClient> externalSignerHttpClientFactory =
