@@ -1,5 +1,5 @@
 /*
- * Copyright Consensys Software Inc., 2022
+ * Copyright Consensys Software Inc., 2025
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
@@ -15,6 +15,7 @@ package tech.pegasys.teku.validator.client.proposerconfig;
 
 import java.io.File;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Optional;
 import tech.pegasys.teku.infrastructure.async.AsyncRunner;
@@ -36,10 +37,10 @@ public interface ProposerConfigProvider {
     if (source.isPresent()) {
       URL sourceUrl;
       try {
-        sourceUrl = new URL(source.get());
+        sourceUrl = URI.create(source.get()).toURL();
         return new UrlProposerConfigProvider(
             asyncRunner, refresh, proposerConfigLoader, timeProvider, sourceUrl);
-      } catch (MalformedURLException e1) {
+      } catch (IllegalArgumentException | MalformedURLException e1) {
         try {
           sourceUrl = new File(source.get()).toURI().toURL();
         } catch (MalformedURLException e2) {
